[package]
name = "bestls"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
clap = {version = "4.5.39", features = ["derive"]}
dunce = "1.0.5"
owo-colors = "4.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
strum = {version = "0.28.0", features = ["derive"]}
strum_macros = "0.28.0"
tabled = "0.21.0"

# TODO Configurar build
